syntax = "proto3";
package gradlegRPC;
option java_package = "io.grpc.hellos";


service HelloWorldService{
  rpc hello(HelloRequest) returns (HelloResponse){}
  rpc grobotID(getRobotID) returns (robotID){}
}


message HelloRequest{
  string name = 1;
}

message HelloResponse{
  string name = 1;
}

message getRobotID {
  string key = 1;
  int32 value = 2;
}

message robotID{
  string name = 1;
}